--- a/app/views/scores/index.html.haml
+++ b/app/views/scores/index.html.haml
@@ -19,10 +19,10 @@
               = game.played_on.to_time.strftime('%b %d, %Y')
             - if !score.nil?
               %span.pull-right
-                = link_to "Edit", { controller: :scores, action: :edit, id: score.id, student_id: params[:student_id], season_id: params[:season_id]} , class: "btn btn-success btn-xs"
+                = link_to "Edit", edit_season_student_score_path(@season, @student, score), class: "btn btn-success btn-xs"
         %div.panel-body
           - if score.nil?
-            = link_to "Record Scores", { controller: "scores", action: "new", student_id: params[:student_id], season_id: params[:season_id]} , class: "btn btn-success"
+            = link_to "Record Scores", new_season_student_score_path(@season, @student, :game_id => game.id), class: "btn btn-success"
           - else
             %div.alert{class: "#{alert_color(score.total)}"}
               %div.row
