Cleaned up seasons paths

--- a/app/views/seasons/edit.html.haml
+++ b/app/views/seasons/edit.html.haml
@@ -4,4 +4,4 @@
 
 = render 'form'
 
-= link_to 'Back', seasons_path, class: "btn btn-danger"
+= link_to 'Back', season_path(@season), class: "btn btn-danger"
