--- a/app/views/sections/edit.html.haml
+++ b/app/views/sections/edit.html.haml
@@ -18,5 +18,4 @@
 
     = f.submit class: "btn btn-success"
 
-= link_to 'Show', @section, class: "btn btn-primary"
-= link_to 'Back', sections_path, class: "btn btn-danger"
+= link_to 'Back', @section, class: "btn btn-danger"
