--- a/app/views/sections/show.html.haml
+++ b/app/views/sections/show.html.haml
@@ -30,4 +30,4 @@
             = render 'student_row', student: student
 
 = link_to 'Edit', edit_section_path(@section), class: "btn btn-success"
-= link_to 'Back', sections_path, class: "btn btn-danger"
+= link_to 'Back', season_path(@section.season), class: "btn btn-danger"
