--- a/app/views/sections/_student_row.html.haml
+++ b/app/views/sections/_student_row.html.haml
@@ -20,8 +20,8 @@
   %div.col-sm-2
     %div.form-group
       %div.input-group
-        = link_to "GDS", "#", class: "input-group-addon btn-primary btn"
-        = text_field_tag :gds_count, 0, {class: "form-control"}
+        = link_to "GDS", season_student_gds_index_path(@section.season, student), class: "input-group-addon btn-primary btn"
+        = text_field_tag :gds_count, student.gdsCount(@section), {class: "form-control"}
   %div.col-sm-2
     %div.form-group
       %div.input-group
