--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,14 @@ body {
   margin-bottom: 15px;
 }
 
+.bottom-margin {
+  margin-bottom: 15px;
+}
+
+.bottom-margin-large {
+  margin-bottom: 30px;
+}
+
 .vertical-align {
   display: flex;
   align-items: center;
