--- a/app/views/gds/index.html.haml
+++ b/app/views/gds/index.html.haml
@@ -44,3 +44,6 @@
                   %strong
                     Comment:
                   = gds.comment
+%div.row
+  %div.col-sm-12
+    = link_to "Back", section_path(@season.sections.where(id: @student.section_members.map { |s| s.section_id }).first), class: "btn btn-danger"
