--- a/app/views/gigs/student_view.html.haml
+++ b/app/views/gigs/student_view.html.haml
@@ -29,3 +29,6 @@
                   = gig.offense
                   %span.badge
                     = gig.value
+%div.row
+  %div.col-sm-12
+    = link_to "Back", section_path(@season.sections.where(id: @student.section_members.map { |s| s.section_id }).first), class: "btn btn-danger"
