--- a/app/views/seasons/show.html.haml
+++ b/app/views/seasons/show.html.haml
@@ -17,7 +17,7 @@
   %div.col-sm-12
     %div.btn-group.btn-group-justified
       = link_to "Recruitment", season_recruitment_path(@season), class: "btn btn-warning"
-      = link_to "Gigs", "#", class: "btn btn-info"
+      = link_to "Gigs", season_gigs_path(@season), class: "btn btn-info"
       = link_to "GDS", season_gds_path(@season), class: "btn btn-danger"
       = link_to 'Edit Season', edit_season_path(@season), class: "btn btn-success"
 
