--- a/app/views/seasons/show.html.haml
+++ b/app/views/seasons/show.html.haml
@@ -23,7 +23,7 @@
 
 %div.row
   %div.col-sm-12
-    %div.panel.panel-default
+    %div.panel.panel-primary
       %div.panel-heading
         %div.panel-title
           Season Summary
