--- a/app/views/seasons/_game_panel.html.haml
+++ b/app/views/seasons/_game_panel.html.haml
@@ -1,4 +1,4 @@
-%div.panel.panel-default
+%div.panel.panel-primary
   %div.panel-heading{:role => "tab", id: "heading#{index}"}
     %h4.panel-title
       %a.collapsed{"aria-controls" => "collapse#{index}", "aria-expanded" => "false", "data-parent" => "#accordion", "data-toggle" => "collapse", :href => "#collapse#{index}"}
@@ -21,5 +21,10 @@
           %div.col-sm-12
             %div.progress
               %div.progress-bar{style: "width: #{gds.progress_bar_width}", class: "#{gds.progress_bar_float} #{gds.progress_bar_color}"}
-                %a{"data-container"=>"body", "data-toggle"=>"popover", "data-placement"=>"top", "data-content"=>"#{gds.section_name} | #{gds.rank_name}", "style"=>"color: inherit;"}
+                %a{"data-container"=>"body", "data-toggle"=>"popover", "data-placement"=>"top", "data-content"=>"#{gds.section_name} | #{gds.rank_name}</br>#{mail_to gds.student.email, gds.student.email}", "style"=>"color: inherit;"}
                   = gds.student.full_name
+      - if !gds_sorted.empty?
+        %div.row
+          %div.col-sm-12
+            =label_tag :emails
+            =text_field :emails, { },:value => gds_sorted.map(&:student).map(&:email).join(", "), class: "form-control"
