--- a/app/views/sections/_student_row.html.haml
+++ b/app/views/sections/_student_row.html.haml
@@ -16,7 +16,7 @@
     %div.form-group
       %div.input-group
         = link_to "Gigs", season_student_gigs_path(@section.season, student), class: "input-group-addon btn-primary btn"
-        = text_field_tag :gig_count, 0, {class: "form-control"}
+        = text_field_tag :gig_count, student.season_gig_count(@section.season), {class: "form-control"}
   %div.col-sm-2
     %div.form-group
       %div.input-group
