--- a/app/views/students/index.html.haml
+++ b/app/views/students/index.html.haml
@@ -18,7 +18,7 @@
 %div.row
   %h1
     %div.col-sm-6
-      Unclaimed Students
+      Unclaimed Recruits
       = "(#{@unclaimed_students.size})" if @unclaimed_students.size != 0
     %div.col-sm-6
       %div.btn-group.pull-right
