--- a/app/views/students/_search_students.html.haml
+++ b/app/views/students/_search_students.html.haml
@@ -6,6 +6,12 @@
         Name
       %th.selected
         Email
+      - if @special_fields.include?("Instruments")
+        %th.selected
+          Instruments
+      - if @special_fields.include?("Ensembles")
+        %th.selected
+          Ensembles
       - @fields.each do |field|
         - f = Field.find(field)
         - case f.group_id
@@ -38,6 +44,12 @@
           = student.full_name_reversed
         %td
           = student.email
+        - if @special_fields.include?("Instruments")
+          %td
+            = student.instrument_list
+        - if @special_fields.include?("Ensembles")
+          %td
+            = student.ensemble_list
         - @fields.each do |field|
           - case Field.find(field).group_id
           - when 1
