--- a/app/assets/stylesheets/students.css.scss
+++ b/app/assets/stylesheets/students.css.scss
@@ -3,5 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "jquery.jsonview.css";
 @import "jquery.dataTables.css";
+@import "select2.min.css";
 div.DTTT { margin-bottom: 0.5em; float: right; }
 div.dataTables_wrapper { clear: both; }
